...
                    ),
                  );
                },
              ),
            ),            const SizedBox(width: 16),
            Text(
              'Your cart',
              style: TextStyle(
                color: Colors.black,
                fontSize: ResponsiveHelper.fontSize(
                  context: context,
                  mobile: 18.0,
                  tablet: 20.0,
...
                          backgroundColor: const Color(0xFF4d2963),
                          shape: RoundedRectangleBorder(
                            borderRadius: BorderRadius.circular(4),
                          ),
                        ),
                        child: const Text(
                          'Checkout',
                          style: TextStyle(
                            fontSize: 16,
                            fontWeight: FontWeight.w600,
                            color: Colors.white,
                          ),
                        ),
...
