...
          colour: selectedColour!,
        ),
      );

      ScaffoldMessenger.of(context).showSnackBar(
        SnackBar(
          content: const Text('Added to cart!'),
          backgroundColor: const Color(0xFF4d2963),
          action: SnackBarAction(
            label: 'View Cart',
            textColor: Colors.white,
            onPressed: () => navigateToCart(context),
          ),
...
                        backgroundColor: const Color(0xFF4d2963),
                        shape: RoundedRectangleBorder(
                          borderRadius: BorderRadius.circular(4),
                        ),
                      ),
                      child: Text(
                        'Add to cart',
                        style: TextStyle(
                          fontSize: ResponsiveHelper.fontSize(
                            context: context,
                            mobile: 15.0,
                            desktop: 16.0,
                          ),
...
